mutants.out/log/crates__sandbox__src__lib.rs_line_516_col_5.log

*** crates/sandbox/src/lib.rs:516:5: replace compile_linux -> CompiledSandboxPlan with Default::default()

*** mutation diff:
--- crates/sandbox/src/lib.rs
+++ replace compile_linux -> CompiledSandboxPlan with Default::default()
@@ -508,79 +508,17 @@
     )
 }
 
 fn compile_linux(
     command: &CommandSpec,
     policy: &SandboxPolicy,
     backend_available: bool,
 ) -> CompiledSandboxPlan {
-    let mut args = vec![
-        "--unshare-user".to_string(),
-        "--uid".to_string(),
-        "0".to_string(),
-        "--gid".to_string(),
-        "0".to_string(),
-        "--unshare-pid".to_string(),
-        "--die-with-parent".to_string(),
-        "--proc".to_string(),
-        "/proc".to_string(),
-        "--dev".to_string(),
-        "/dev".to_string(),
-    ];
-
-    if policy.network.mode == NetworkMode::Restricted {
-        args.push("--unshare-net".to_string());
-    }
-
-    for path in LINUX_RUNTIME_READ_PATHS {
-        let runtime_path = Path::new(path);
-        if runtime_path.exists() {
-            args.push("--ro-bind".to_string());
-            args.push((*path).to_string());
-            args.push((*path).to_string());
-        }
-    }
-
-    for entry in &policy.filesystem.entries {
-        let sandbox_path = unix_path_arg(&entry.path);
-        match entry.access {
-            FilesystemAccess::Read => {
-                args.push("--ro-bind".to_string());
-                args.push(sandbox_path.clone());
-                args.push(sandbox_path);
-            }
-            FilesystemAccess::Write => {
-                args.push("--bind".to_string());
-                args.push(sandbox_path.clone());
-                args.push(sandbox_path);
-            }
-            FilesystemAccess::None => {
-                if entry.path.exists() || path_is_under_writable_entry(policy, &entry.path) {
-                    args.push("--tmpfs".to_string());
-                    args.push(sandbox_path.clone());
-                    args.push("--remount-ro".to_string());
-                    args.push(sandbox_path);
-                }
-            }
-        }
-    }
-
-    args.push("--".to_string());
-    args.push(command.program.clone());
-    args.extend(command.args.clone());
-
-    CompiledSandboxPlan {
-        backend: backend_report(Platform::Linux, backend_available),
-        program: "bwrap".to_string(),
-        args,
-        current_dir: command.current_dir.clone(),
-        env: command.env.clone(),
-        stdin: command.stdin.clone(),
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn compile_windows(
     command: &CommandSpec,
     policy: &SandboxPolicy,
     backend_available: bool,
 ) -> CompiledSandboxPlan {
     let mut args = vec!["--restricted-token".to_string()];


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=sandbox@0.1.0
       Dirty sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/crates/sandbox): the file `crates/sandbox/src/lib.rs` has changed (1778057777.382997662s, 7s after last build at 1778057770.858097257s)
   Compiling sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/crates/sandbox)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a114b1d7655828cd -C extra-filename=-84da628582973993 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2b325062dbe2c508 -C extra-filename=-3854b11f8daf2006 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps`
error[E0277]: the trait bound `CompiledSandboxPlan: Default` is not satisfied
   --> crates/sandbox/src/lib.rs:516:5
    |
516 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `CompiledSandboxPlan`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `sandbox` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2b325062dbe2c508 -C extra-filename=-3854b11f8daf2006 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `sandbox` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a114b1d7655828cd -C extra-filename=-84da628582973993 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
